# Langgraph_AI

./: .gitignore  README.md  graph.py  main.py  pyproject.toml  test.py
agents/: academic_agent.py  general_agent.py  news_agent.py  shopping_agent.py
api_key_enpoints/: amazon_api_client.py  gemini_client.py  world_newsapi_client.py
database/: product_data.json
prompts/academic/: academic_agent_prompt.py  academic_sum_tool.py  academic_video_sum_tool.py
prompts/general/: general_agent_prompt.py  general_prompt.py
prompts/news/: news_agent_prompt.py  news_sum_prompt.py
prompts/router/: classification_prompt.py
prompts/shopping/: compare_prompt.py  recommend_prompt.py  shopping_agent_prompt.py
tools/: academic_tools.py  general_tools.py  news_tools.py  shopping_tools.py
utils/: chat_history.py  gemini.py  router.py  state_types.py
